--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -17,11 +17,12 @@
       </h2>
     </div>
   </div>
-  <div @fadeInAnimation class="row-queries container">
-    <div class="row" *ngIf="(appState | async).blocks.length; else elseBlock">
+  <div @fadeInAnimation class="container">
+     <!---------------------------- ROW 1 ---------------------------->
+    <div class="row row-queries" *ngIf="(appState | async).blocks.length; else elseBlock">
       <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
-        <div style="cursor: pointer;" routerLink="/last-block" class="is-parent">
-          <mat-card class="query-card" mdbTooltip="Latest Block Height" placement="top">
+        <div style="cursor: pointer;" routerLink="/last-block" class="is-parent card-deck">
+          <!-- <mat-card class="query-card" mdbTooltip="Latest Block Height" placement="top">
             <mat-card-header>
               <mat-card-title class="subtitle box-key" style="margin-left:-11px">
                 <i class="ion-cube"></i>&nbsp;Last Block
@@ -34,11 +35,31 @@
                 [innerHTML]="block.header?.height !== null ? block.header.height : 0">
               </h3>
             </mat-card-content>
-          </mat-card>                  
+          </mat-card>                   -->
+          <mdb-card cascade="true">
+              <!--Card image-->
+              <div class="view view-cascade gradient-card-header purple-gradient">
+                <h2 class="card-header-title" *ngFor="let block of (appState | async).blocks.reverse().slice(0,1)"
+                [innerHTML]="block.header?.height !== null ? block.header.height : 0"
+                ></h2>
+                <p>Last Block</p>
+              </div>
+              <!--/Card image-->
+              <mdb-card-body cascade="true" class="text-center">
+                <!--Card content-->
+                <mdb-card-text>
+                    <br>
+                  last updated: 
+                </mdb-card-text>
+              </mdb-card-body>
+              <!--/.Card content-->
+          
+            </mdb-card>
         </div>
       </div>
-      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
-        <mat-card class="query-card" mdbTooltip="Consensus State" placement="top">
+
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper card-deck">
+        <!-- <mat-card class="query-card" mdbTooltip="Consensus State" placement="top">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
               <i class="ion-load-a"></i>&nbsp;Consensus
@@ -47,10 +68,28 @@
           <mat-card-content>
             <h3 class="title chain-queries-title box-value">{{(appState | async).roundStep.step?.split('RoundStep')[1]}}</h3>
           </mat-card-content>
-        </mat-card>                  
+        </mat-card>                   -->
+        <mdb-card cascade="true">
+            <!--Card image-->
+            <div class="view view-cascade gradient-card-header purple-gradient">
+              <h2 class="card-header-title">{{(appState | async).roundStep.step?.split('RoundStep')[1]}}</h2>
+              <p>Consensus</p>
+            </div>
+            <!--/Card image-->
+            <mdb-card-body cascade="true" class="text-center">
+              <!--Card content-->
+              <mdb-card-text>
+                  <br>
+                last updated: 
+              </mdb-card-text>
+            </mdb-card-body>
+            <!--/.Card content-->
+        
+          </mdb-card>
       </div>
-      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
-        <mat-card class="query-card" mdbTooltip="Total Active Validators" placement="top">
+
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper card-deck">
+        <!-- <mat-card class="query-card" mdbTooltip="Total Active Validators" placement="top">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
               <i class="ion-person-stalker"></i>&nbsp;Validators
@@ -59,10 +98,28 @@
           <mat-card-content>
               <h3 class="title chain-queries-title box-value">{{(appState | async).validators?.length}}</h3>
           </mat-card-content>
-        </mat-card>    
+        </mat-card>     -->
+        <mdb-card cascade="true">
+            <!--Card image-->
+            <div class="view view-cascade gradient-card-header purple-gradient">
+              <h2 class="card-header-title">{{(appState | async).validators?.length}}</h2>
+              <p>Validators</p>
+            </div>
+            <!--/Card image-->
+            <mdb-card-body cascade="true" class="text-center">
+              <!--Card content-->
+              <mdb-card-text>
+                  <br>
+                last updated: 
+              </mdb-card-text>
+            </mdb-card-body>
+            <!--/.Card content-->
+        
+          </mdb-card>
       </div>
-      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
-          <mat-card class="query-card" mdbTooltip="Total Bonded Stake" placement="top">
+
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper card-deck">
+          <!-- <mat-card class="query-card" mdbTooltip="Total Bonded Stake" placement="top">
             <mat-card-header>
               <mat-card-title class="subtitle box-key" style="margin-left:-11px">
                 <i class="ion-soup-can"></i>&nbsp;Bonded
@@ -76,15 +133,37 @@
                     /((appState | async).stakePool.bonded_tokens/1e6 + (appState | async).stakePool.not_bonded_tokens/1e6) 
                     | percent: '.2-2'
                   }})
-                  <!-- {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}} -->
                 </h3>
             </mat-card-content>
-          </mat-card>                  
+          </mat-card>                   -->
+          <mdb-card cascade="true">
+              <!--Card image-->
+              <div class="view view-cascade gradient-card-header purple-gradient">
+                <h2 class="card-header-title">{{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}}
+                </h2>
+                <p>Bonded</p>
+              </div>
+              <!--/Card image-->
+              <mdb-card-body cascade="true" class="text-center">
+                <!--Card content-->
+                <mdb-card-text>
+                    <br>
+                    {{
+                      (appState | async).stakePool.bonded_tokens/1e6
+                      /((appState | async).stakePool.bonded_tokens/1e6 + (appState | async).stakePool.not_bonded_tokens/1e6) 
+                      | percent: '.2-2'
+                    }}
+                </mdb-card-text>
+              </mdb-card-body>
+              <!--/.Card content-->
+            </mdb-card>
       </div>
     </div>
-    <div class="row" *ngIf="(appState | async).blocks.length; else elseBlock">
-      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
-        <div style="cursor: pointer;" routerLink="/last-block" class="is-parent">
+    
+    <!---------------------------- ROW 2 ---------------------------->
+    <div class="row row-queries" *ngIf="(appState | async).blocks.length; else elseBlock">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper card-deck">
+        <!-- <div style="cursor: pointer;" routerLink="/last-block" class="is-parent">
           <mat-card class="query-card" mdbTooltip="Block Interval" placement="top">
             <mat-card-header>
               <mat-card-title class="subtitle box-key" style="margin-left:-11px">
@@ -97,10 +176,28 @@
               </h3>
             </mat-card-content>
           </mat-card>                  
-        </div>
+        </div> -->
+        <mdb-card cascade="true">
+            <!--Card image-->
+            <div class="view view-cascade gradient-card-header purple-gradient">
+              <h2 class="card-header-title">{{avgBlockTime | number: '.2-2'}}
+              </h2>
+              <p>Block Time</p>
+            </div>
+            <!--/Card image-->
+            <mdb-card-body cascade="true" class="text-center">
+              <!--Card content-->
+              <mdb-card-text>
+                  <br>
+                  Seconds
+              </mdb-card-text>
+            </mdb-card-body>
+            <!--/.Card content-->
+          </mdb-card>
       </div>
-      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
-        <mat-card class="query-card" mdbTooltip="Community Pool Stake" placement="top">
+
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper card-deck">
+        <!-- <mat-card class="query-card" mdbTooltip="Community Pool Stake" placement="top">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
               <i class="ion-cash"></i>&nbsp;Community Pool
@@ -111,10 +208,28 @@
               {{ (appState | async).stakePool.community_pool?.amount/1e6 | number:'.0-0'}}
             </h3>
           </mat-card-content>
-        </mat-card>                  
+        </mat-card>                   -->
+        <mdb-card cascade="true">
+            <!--Card image-->
+            <div class="view view-cascade gradient-card-header purple-gradient">
+              <h2 class="card-header-title">{{ (appState | async).stakePool.community_pool?.amount/1e6 | number:'.0-0'}}
+              </h2>
+              <p>Community Pool</p>
+            </div>
+            <!--/Card image-->
+            <mdb-card-body cascade="true" class="text-center">
+              <!--Card content-->
+              <mdb-card-text>
+                  <br>
+                  ATOM
+              </mdb-card-text>
+            </mdb-card-body>
+            <!--/.Card content-->
+          </mdb-card>
       </div>
-      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
-        <mat-card class="query-card" mdbTooltip="Inflation Rate" placement="top">
+
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper card-deck">
+        <!-- <mat-card class="query-card" mdbTooltip="Inflation Rate" placement="top">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
               <i class="ion-android-arrow-up"></i>&nbsp;Inflation
@@ -123,10 +238,28 @@
           <mat-card-content>
               <h3 class="title chain-queries-title box-value">{{inflation| percent: '.2-2'}}</h3>
           </mat-card-content>
-        </mat-card>    
+        </mat-card>     -->
+        <mdb-card cascade="true">
+            <!--Card image-->
+            <div class="view view-cascade gradient-card-header purple-gradient">
+              <h2 class="card-header-title">{{inflation| percent: '.2-2'}}
+              </h2>
+              <p>Inflation</p>
+            </div>
+            <!--/Card image-->
+            <mdb-card-body cascade="true" class="text-center">
+              <!--Card content-->
+              <mdb-card-text>
+                  <br>
+                  Last updated
+              </mdb-card-text>
+            </mdb-card-body>
+            <!--/.Card content-->
+        </mdb-card>
       </div>
-      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
-          <mat-card class="query-card" mdbTooltip="ATOM USD Price" placement="top">
+
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper card-deck">
+          <!-- <mat-card class="query-card" mdbTooltip="ATOM USD Price" placement="top">
             <mat-card-header>
               <mat-card-title class="subtitle box-key" style="margin-left:-11px">
                 <i class="ion-social-usd"></i>&nbsp;Price
@@ -135,11 +268,28 @@
             <mat-card-content>
                 <h3 class="title box-value" style="overflow: hidden; white-space: nowrap;">
                   $ {{ atomData?.quote.USD.price | number:'.2-2' }}
-                  <!-- {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}} -->
                 </h3>
             </mat-card-content>
-          </mat-card>                  
+          </mat-card>                   -->
+          <mdb-card cascade="true">
+              <!--Card image-->
+              <div class="view view-cascade gradient-card-header purple-gradient">
+                <h2 class="card-header-title">${{ atomData?.quote.USD.price | number:'.2-2' }}
+                </h2>
+                <p>Price</p>
+              </div>
+              <!--/Card image-->
+              <mdb-card-body cascade="true" class="text-center">
+                <!--Card content-->
+                <mdb-card-text>
+                    <br>
+                    Last updated:
+                </mdb-card-text>
+              </mdb-card-body>
+              <!--/.Card content-->
+          </mdb-card>
       </div>
+      
     </div>
   </div>
   <ng-template #elseBlock>
