--- a/src/app/components/status-bar/status-bar.component.scss
+++ b/src/app/components/status-bar/status-bar.component.scss
@@ -28,3 +28,21 @@
     max-width: 95%; /*1140px or in %*/
     margin: 0 auto;
 }
+
+.row-queries {
+    justify-content: center;
+}
+.card-header-title {
+    color: white;
+    font-size: 200%;
+    text-align: center;
+    display: inline-block;   
+}
+
+.card-body {
+    padding: 0;
+}
+
+.card-text {
+    margin-bottom: 0;
+}
