--- a/src/app/components/governance/gov-detail/gov-detail.component.html
+++ b/src/app/components/governance/gov-detail/gov-detail.component.html
@@ -82,10 +82,12 @@
         <mdb-tab heading="ALL">
           <div class="row">
             <div class="col-12 voters-list">
-              <p *ngFor="let voter of proposal.currentVotes.Yes">{{voter}}</p>
-              <p *ngFor="let voter of proposal.currentVotes.No">{{voter}}</p>
-              <p *ngFor="let voter of proposal.currentVotes.NoWithVeto">{{voter}}</p>
-              <p *ngFor="let voter of proposal.currentVotes.Abstain">{{voter}}</p>
+              <p *ngFor="let voter of proposal.currentVotes.All">
+                <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( voter ) : false; else elseVoter">
+                  {{ (appState | async).valsMap.get( voter )}}
+                </span>
+                <ng-template #elseVoter>{{voter}}</ng-template>
+              </p>
             </div>
           </div>
         </mdb-tab>
@@ -93,7 +95,12 @@
         <mdb-tab heading="YES">
           <div class="row">
             <div class="col-12 voters-list">
-              <p *ngFor="let voter of proposal.currentVotes.Yes">{{voter}}</p>
+              <p *ngFor="let voter of proposal.currentVotes.Yes">
+                <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( voter ) : false; else elseYesVoter">
+                  {{ (appState | async).valsMap.get( voter )}}
+                </span>
+                <ng-template #elseYesVoter>{{voter}}</ng-template>
+              </p>
             </div>
           </div>
         </mdb-tab>
@@ -101,21 +108,36 @@
         <mdb-tab heading="NO">
           <div class="row">
             <div class="col-12 voters-list">
-              <p *ngFor="let voter of proposal.currentVotes.No">{{voter}}</p>
+              <p *ngFor="let voter of proposal.currentVotes.No">
+                <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( voter ) : false; else elseNoVoter">
+                  {{ (appState | async).valsMap.get( voter )}}
+                </span>
+                <ng-template #elseNoVoter>{{voter}}</ng-template>
+              </p>
             </div>
           </div>
         </mdb-tab>
         <mdb-tab heading="NOWITHVETO">
           <div class="row">
             <div class="col-12 voters-list">
-              <p *ngFor="let voter of proposal.currentVotes.NoWithVeto">{{voter}}</p>
+              <p *ngFor="let voter of proposal.currentVotes.NoWithVeto">
+                <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( voter ) : false; else elseVetoVoter">
+                  {{ (appState | async).valsMap.get( voter )}}
+                </span>
+                <ng-template #elseVetoVoter>{{voter}}</ng-template>
+              </p>
             </div>
           </div>
         </mdb-tab>
         <mdb-tab heading="ABSTAIN">
           <div class="row">
             <div class="col-12 voters-list">
-              <p *ngFor="let voter of proposal.currentVotes.Abstain">{{voter}}</p>
+              <p *ngFor="let voter of proposal.currentVotes.Abstain">
+                <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( voter ) : false; else elseAbstainVoter">
+                  {{ (appState | async).valsMap.get( voter )}}
+                </span>
+                <ng-template #elseAbstainVoter>{{voter}}</ng-template>
+              </p>
             </div>
           </div>
         </mdb-tab>
